// Copyright 2023 The gRPC-GCP-Mobile Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package net.devh.boot.grpc.examples.observability.proto;

option java_package = "net.devh.boot.grpc.examples.observability.proto";
option java_outer_classname = "ExampleServiceProto";
option java_multiple_files = true;

service ExampleService {
  rpc UnaryRpc (UnaryRequest) returns (UnaryResponse) {}
  rpc ClientStreamingRpc (stream ClientStreamingRequest) returns (ClientStreamingResponse) {}
  rpc ServerStreamingRpc (ServerStreamingRequest) returns (stream ServerStreamingResponse) {}
  rpc BidiStreamingRpc (stream BidiStreamingRequest) returns (stream BidiStreamingResponse) {}
}

message UnaryRequest {
  string message = 1;
}

message UnaryResponse {
  string message = 1;
}

message ClientStreamingRequest {
  string message = 1;
}

message ClientStreamingResponse {
  string message = 1;
}

message ServerStreamingRequest {
  string message = 1;
}

message ServerStreamingResponse {
  string message = 1;
}

message BidiStreamingRequest {
  string message = 1;
}

message BidiStreamingResponse {
  string message = 1;
}
